--- a/src/app/general/post/comment/comment.component.html
+++ b/src/app/general/post/comment/comment.component.html
@@ -1,7 +1,14 @@
 <!-- * All Comments -->
 <div class="all-comments" *ngIf="allComments.length > 0">
   <div class="comment" *ngFor="let comment of allComments">
-    <div class="image-container" [ngStyle]="{ 'background-image': 'url(' + image + ')' }"></div>
+    <!-- <div class="image-container" [ngStyle]="{ 'background-image': 'url(' + image + ')' }"></div> -->
+    <app-user-image
+      [image]="comment.image"
+      [firstName]="comment.firstName"
+      [lastName]="comment.lastName"
+      [username]="comment.username"
+      size="xs"
+    ></app-user-image>
     <div class="text-container">
       <p class="username"
         ><strong>{{ comment.username }}</strong>
