--- a/src/app/general/dialogs/atc/atc.component.html
+++ b/src/app/general/dialogs/atc/atc.component.html
@@ -17,30 +17,13 @@
           <h6>Add to existing collections</h6>
           <mat-progress-bar mode="indeterminate" *ngIf="isLoading">
           </mat-progress-bar>
-          <div
-            class="collection"
+          
+          <app-mini-collection
             *ngFor="let collection of collections"
-            (click)="addResourceToCollection(collection.id)"
-            matRipple
-          >
-            <div
-              class="image"
-              [ngStyle]="{
-                'background-image':
-                  'url(' + collection.resource1.smImage.link + ')'
-              }"
-            ></div>
-
-            <p>
-              {{ collection.title }}
-              <span
-                class="in-this-collection"
-                *ngIf="isResourceInThisCollection(collection)"
-              >
-                In this collection
-              </span>
-            </p>
-          </div>
+            (click)="addResourceToCollection(collection)"
+            [data]="collection"
+            [resourceId]="data.id"
+          ></app-mini-collection>
 
           <p
             *ngIf="!isLoading && collections.length === 0"
